debian/source_ubuntu-release-upgrader.py: Include xorg_fixup.log if it exists.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
+ubuntu-release-upgrader (1:19.04.8) UNRELEASED; urgency=medium
+
+  * debian/source_ubuntu-release-upgrader.py: Include xorg_fixup.log if it
+    exists.
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 14 Dec 2018 15:28:46 -0800
+
 ubuntu-release-upgrader (1:19.04.7) disco; urgency=medium
 
   [ Brian Murray ]
-  * DistUpgrade/DistUpgradeCache.py: When calculating free space needed for
-    mount points don't use a negative number as the buffer. (LP: #1786484)
-  * fix more typos re RELEASE_UPRADER_ALLOW_THIRD_PARTY
   * DistUpgrade/DistUpgradeCache.py: When calculating free space needed for
     mount points don't use a negative number as the buffer. (LP: #1786484)
   * fix more typos re RELEASE_UPRADER_ALLOW_THIRD_PARTY
