releasing package ubuntu-release-upgrader version 1:19.04.8

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:19.04.8) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:19.04.8) disco; urgency=medium
 
   * debian/source_ubuntu-release-upgrader.py: Include xorg_fixup.log if it
     exists.
