DistUpgrade/xorg_fix_proprietary.py: shebang needs to use python3 not python.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:19.04.9) UNRELEASED; urgency=medium
+
+  * DistUpgrade/xorg_fix_proprietary.py: shebang needs to use python3 not
+    python.
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 21 Dec 2018 10:13:57 -0800
+
 ubuntu-release-upgrader (1:19.04.8) disco; urgency=medium
 
   * debian/source_ubuntu-release-upgrader.py: Include xorg_fixup.log if it
