releasing package ubuntu-release-upgrader version 1:19.04.9

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-ubuntu-release-upgrader (1:19.04.9) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:19.04.9) disco; urgency=medium
 
   * DistUpgrade/xorg_fix_proprietary.py: shebang needs to use python3 not
     python.
 
- -- Brian Murray <brian@ubuntu.com>  Fri, 21 Dec 2018 10:13:57 -0800
+ -- Brian Murray <brian@ubuntu.com>  Fri, 21 Dec 2018 10:14:53 -0800
 
 ubuntu-release-upgrader (1:19.04.8) disco; urgency=medium
 
