--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+ubuntu-release-upgrader (1:19.04.9) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeView.py,
+    DistUpgrade/DistUpgradeViewGtk3.py,
+    DistUpgrade/DistUpgradeViewKDE.py,
+    DistUpgrade/DistUpgradeViewNonInteractive.py,
+    DistUpgrade/DistUpgradeViewText.py:
+    - add askCancelContinueQuestion for all the supported views.
+
+ -- Andrea Azzarone <andrea.azzarone@canonical.com>  Thu, 17 Jan 2019 04:16:29 -0800
+
 ubuntu-release-upgrader (1:19.04.9) disco; urgency=medium
 
   * DistUpgrade/xorg_fix_proprietary.py: shebang needs to use python3 not
