releasing package ubuntu-release-upgrader version 1:19.04.10

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-ubuntu-release-upgrader (1:19.04.9) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:19.04.10) disco; urgency=medium
 
+  [ Andrea Azzarone ]
   * DistUpgrade/DistUpgradeView.py,
     DistUpgrade/DistUpgradeViewGtk3.py,
     DistUpgrade/DistUpgradeViewKDE.py,
@@ -12,7 +13,7 @@ ubuntu-release-upgrader (1:19.04.9) UNRELEASED; urgency=medium
   * debian/control: add an explicit python3-distro-info dependency to
     python3-distupgrade as it is now required by DistUpgradeController.
 
- -- Andrea Azzarone <andrea.azzarone@canonical.com>  Thu, 17 Jan 2019 04:16:29 -0800
+ -- Brian Murray <brian@ubuntu.com>  Mon, 21 Jan 2019 08:57:50 -0800
 
 ubuntu-release-upgrader (1:19.04.9) disco; urgency=medium
 
