Launchpad automatic translations update.

--- a/po/bn.po
+++ b/po/bn.po
@@ -12,14 +12,14 @@ msgstr ""
 "Project-Id-Version: shotwell-0.7.2\n"
 "Report-Msgid-Bugs-To: sebastian.heinlein@web.de\n"
 "POT-Creation-Date: 2015-10-07 09:44-0700\n"
-"PO-Revision-Date: 2019-02-09 16:57+0000\n"
-"Last-Translator: Baivab Das <Unknown>\n"
+"PO-Revision-Date: 2019-02-10 12:11+0000\n"
+"Last-Translator: Istiak Ferdous <Unknown>\n"
 "Language-Team: Bengali <ankur-bd-l10n@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2019-02-10 05:38+0000\n"
+"X-Launchpad-Export-Date: 2019-02-11 05:42+0000\n"
 "X-Generator: Launchpad (build 18872)\n"
 "Language: en\n"
 "X-Language: bn_BD\n"
@@ -29,7 +29,7 @@ msgstr ""
 #: ../DistUpgrade/distro.py:215 ../DistUpgrade/distro.py:446
 #, python-format
 msgid "Server for %s"
-msgstr "%s-এর জন্য সার্ভার"
+msgstr "%s এর জন্য সার্ভার"
 
 #. More than one server is used. Since we don't handle this case
 #. in the user interface we set "custom servers" to true and
