do-release-upgrade: fix typo of development. (LP: #1813470)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:19.04.11) UNRELEASED; urgency=medium
+
+  * do-release-upgrade: fix typo of development. (LP: #1813470)
+
+ -- Brian Murray <brian@ubuntu.com>  Tue, 26 Feb 2019 13:36:56 -0800
+
 ubuntu-release-upgrader (1:19.04.10) disco; urgency=medium
 
   [ Andrea Azzarone ]
