--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-ubuntu-release-upgrader (1:19.04.11) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:19.04.11) disco; urgency=medium
 
   * do-release-upgrade: fix typo of development. (LP: #1813470)
 
- -- Brian Murray <brian@ubuntu.com>  Tue, 26 Feb 2019 13:36:56 -0800
+ -- Brian Murray <brian@ubuntu.com>  Tue, 26 Feb 2019 13:37:50 -0800
 
 ubuntu-release-upgrader (1:19.04.10) disco; urgency=medium
 
