releasing package ubuntu-release-upgrader version 1:19.04.12

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:19.04.12) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:19.04.12) disco; urgency=medium
 
   * DistUpgradeController.py: Check to see if the current release is an LTS
     before warning that livepatch will be disabled. Thanks to Andrea Azzarone
@@ -6,7 +6,7 @@ ubuntu-release-upgrader (1:19.04.12) UNRELEASED; urgency=medium
   * pre-build.sh: run tests first because those are quicker than updating
     mirrors and demotions.
 
- -- Brian Murray <brian@ubuntu.com>  Fri, 08 Mar 2019 10:20:32 -0800
+ -- Brian Murray <brian@ubuntu.com>  Fri, 08 Mar 2019 10:59:32 -0800
 
 ubuntu-release-upgrader (1:19.04.11) disco; urgency=medium
 
