Add a lintian override for unsafe symlinks after removing some crufty symlinks.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:19.04.13) UNRELEASED; urgency=medium
+
+  * Add a lintian override for unsafe symlinks after removing some crufty
+    symlinks.
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 08 Mar 2019 13:27:36 -0800
+
 ubuntu-release-upgrader (1:19.04.12) disco; urgency=medium
 
   * DistUpgradeController.py: Check to see if the current release is an LTS
