* Fix up minor lintian warnings. * Trick dh_python3 into processing script, in a non-standard location.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,12 @@
 ubuntu-release-upgrader (1:19.04.13) UNRELEASED; urgency=medium
 
+  [ Brian Murray ]
   * Add a lintian override for unsafe symlinks after removing some crufty
     symlinks.
+
+  [ Dimitri John Ledkov ]
+  * Fix up minor lintian warnings.
+  * Trick dh_python3 into processing script, in a non-standard location.
 
  -- Brian Murray <brian@ubuntu.com>  Fri, 08 Mar 2019 13:27:36 -0800
 
