releasing package ubuntu-release-upgrader version 1:19.04.13

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:19.04.13) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:19.04.13) disco; urgency=medium
 
   [ Brian Murray ]
   * Add a lintian override for unsafe symlinks after removing some crufty
@@ -8,7 +8,7 @@ ubuntu-release-upgrader (1:19.04.13) UNRELEASED; urgency=medium
   * Fix up minor lintian warnings.
   * Trick dh_python3 into processing script, in a non-standard location.
 
- -- Brian Murray <brian@ubuntu.com>  Fri, 08 Mar 2019 13:27:36 -0800
+ -- Brian Murray <brian@ubuntu.com>  Thu, 14 Mar 2019 10:41:34 -0700
 
 ubuntu-release-upgrader (1:19.04.12) disco; urgency=medium
 
