add in a changelog entry

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+ubuntu-release-upgrader (1:19.04.14) UNRELEASED; urgency=medium
+
+  * DistUpgradeController.py: Instead of checking every sources.list entry to
+    see if they are accessible keep track of the uris and only test once per
+    uri thereby preventing situations where entries for the same server are
+    enabled and disabled. (LP: #1822886)
+
+ -- Brian Murray <brian@ubuntu.com>  Thu, 04 Apr 2019 17:06:26 -0700
+
 ubuntu-release-upgrader (1:19.04.13) disco; urgency=medium
 
   [ Brian Murray ]
