releasing package ubuntu-release-upgrader version 1:19.04.14

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-ubuntu-release-upgrader (1:19.04.14) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:19.04.14) disco; urgency=medium
 
   * DistUpgradeController.py: Instead of checking every sources.list entry to
     see if they are accessible keep track of the uris and only test once per
     uri thereby preventing situations where entries for the same server are
     enabled and disabled. (LP: #1822886)
+  * Update of demotions and mirrors data.
 
  -- Brian Murray <brian@ubuntu.com>  Thu, 04 Apr 2019 17:06:26 -0700
 
