--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:19.04.15) UNRELEASED; urgency=medium
+
+  * debian/control: build depend on the new version of update-manager which
+    supports checking to see if an https url is downloadable. (LP: #1823410)
+  * tests/test_sources.list.py: add a test for https support.
+
+ -- Brian Murray <brian@ubuntu.com>  Mon, 08 Apr 2019 12:15:22 -0700
+
 ubuntu-release-upgrader (1:19.04.14) disco; urgency=medium
 
   * DistUpgradeController.py: Instead of checking every sources.list entry to
