--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+ubuntu-release-upgrader (1:19.04.16) UNRELEASED; urgency=medium
+
+  * DistUpgrade/imported/invoke-rc.d: Import the current version of the script
+    to fix upgrade failures of packages which only ship upstart and
+    systemd units, but no SysV init script. (LP: #1813464)
+  * DistUpgrade/imported/invoke-rc.d.diff: update the diff so that it applies
+    to the current version of invoke-rc.d.
+  * pre-build.sh: actually update invoke-rc.d on a regular basis and try to
+    automatically appply the patch.
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 12 Apr 2019 10:07:58 -0700
+
 ubuntu-release-upgrader (1:19.04.15) disco; urgency=medium
 
   * debian/control: build depend on the new version of update-manager which
