releasing package ubuntu-release-upgrader version 1:19.04.16

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:19.04.16) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:19.04.16) disco; urgency=medium
 
   * DistUpgrade/imported/invoke-rc.d: Import the current version of the script
     to fix upgrade failures of packages which only ship upstart and
@@ -7,8 +7,9 @@ ubuntu-release-upgrader (1:19.04.16) UNRELEASED; urgency=medium
     to the current version of invoke-rc.d.
   * pre-build.sh: actually update invoke-rc.d on a regular basis and try to
     automatically appply the patch.
+  * Update of demotions and mirrors data.
 
- -- Brian Murray <brian@ubuntu.com>  Fri, 12 Apr 2019 10:07:58 -0700
+ -- Brian Murray <brian@ubuntu.com>  Fri, 12 Apr 2019 10:39:09 -0700
 
 ubuntu-release-upgrader (1:19.04.15) disco; urgency=medium
 
