--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:19.10.1) UNRELEASED; urgency=medium
+
+  * data/removal_blacklist.cfg: add blacklist entry for postgresql versions
+    with two major digits e.g. postgresql-11. (LP: #1825563)
+
+ -- Brian Murray <brian@ubuntu.com>  Mon, 22 Apr 2019 12:54:30 -0700
+
 ubuntu-release-upgrader (1:19.04.16) disco; urgency=medium
 
   * DistUpgrade/imported/invoke-rc.d: Import the current version of the script
