--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,11 @@
 ubuntu-release-upgrader (1:19.10.1) UNRELEASED; urgency=medium
 
+  * DistUpgrade/{EOL,Devel}ReleaseAnnouncement,
+    DistUpgrade/window_main.ui,
+    data/gtkbuilder/DistUpgrade.ui,
+    data/DistUpgrade.cfg,
+    pre-build.sh:
+    - updated for 19.04 -> 19.10
   * data/removal_blacklist.cfg: add blacklist entry for postgresql versions
     with two major digits e.g. postgresql-11. (LP: #1825563)
   * Fix broken symbolic link of DistUpgrade/DistUpgrade which caused code from
