* data/DistUpgrade.cfg.bionic,   data/demoted.cfg.bionic,   pre-build.sh:   - support upgrades from bionic (LP: #1827635)

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,10 @@ ubuntu-release-upgrader (1:19.10.1) UNRELEASED; urgency=medium
     data/DistUpgrade.cfg,
     pre-build.sh:
     - updated for 19.04 -> 19.10
+  * data/DistUpgrade.cfg.bionic,
+    data/demoted.cfg.bionic,
+    pre-build.sh:
+    - support upgrades from bionic (LP: #1827635)
   * data/removal_blacklist.cfg: add blacklist entry for postgresql versions
     with two major digits e.g. postgresql-11. (LP: #1825563)
   * Fix broken symbolic link of DistUpgrade/DistUpgrade which caused code from
