--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:19.10.1) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:19.10.1) eoan; urgency=medium
 
   * DistUpgrade/{EOL,Devel}ReleaseAnnouncement,
     DistUpgrade/window_main.ui,
@@ -16,7 +16,7 @@ ubuntu-release-upgrader (1:19.10.1) UNRELEASED; urgency=medium
     the installed ubuntu-release-upgrader to be used instead of code in the
     dist-upgrader tarball. (LP: #1824430)
 
- -- Brian Murray <brian@ubuntu.com>  Mon, 22 Apr 2019 12:54:30 -0700
+ -- Brian Murray <brian@ubuntu.com>  Fri, 03 May 2019 10:24:48 -0700
 
 ubuntu-release-upgrader (1:19.04.16) disco; urgency=medium
 
