DistUpgradeQuirks.py: leverage distro_info to determine version for the release codename so version numbers aren't hard coded and _replaceDebsWithSnaps won't require regular updating.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:19.10.2) UNRELEASED; urgency=medium
+
+  * DistUpgradeQuirks.py: leverage distro_info to determine version for the
+    release codename so version numbers aren't hard coded and
+    _replaceDebsWithSnaps won't require regular updating.
+
+ -- Brian Murray <brian@ubuntu.com>  Mon, 06 May 2019 13:27:37 -0700
+
 ubuntu-release-upgrader (1:19.10.1) eoan; urgency=medium
 
   * DistUpgrade/{EOL,Devel}ReleaseAnnouncement,
