--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:19.10.2) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:19.10.2) eoan; urgency=medium
 
   * DistUpgradeQuirks.py: leverage distro_info to determine version for the
     release codename so version numbers aren't hard coded and
@@ -7,7 +7,7 @@ ubuntu-release-upgrader (1:19.10.2) UNRELEASED; urgency=medium
     config.
   * update references to Eoan since it has an animal now.
 
- -- Brian Murray <brian@ubuntu.com>  Mon, 06 May 2019 13:58:30 -0700
+ -- Brian Murray <brian@ubuntu.com>  Mon, 06 May 2019 14:04:58 -0700
 
 ubuntu-release-upgrader (1:19.10.1) eoan; urgency=medium
 
