--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:19.10.3) UNRELEASED; urgency=medium
+
+  * data/DistUpgrade.cfg: update BaseNames section to kernel packages that
+    appear in Ubuntu 19.04. (LP: #1828072)
+
+ -- Brian Murray <brian@ubuntu.com>  Tue, 07 May 2019 09:55:58 -0700
+
 ubuntu-release-upgrader (1:19.10.2) eoan; urgency=medium
 
   * DistUpgradeQuirks.py: leverage distro_info to determine version for the
