--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-ubuntu-release-upgrader (1:19.10.3) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:19.10.3) eoan; urgency=medium
 
   * data/DistUpgrade.cfg: update BaseNames section to kernel packages that
     appear in Ubuntu 19.04. (LP: #1828072)
   * data/DistUpgrade.cfg.bionic: update KernelRemoval section to kernel
     packages that appear in Ubuntu 18.04. (LP: #1828072)
 
- -- Brian Murray <brian@ubuntu.com>  Tue, 07 May 2019 09:55:58 -0700
+ -- Brian Murray <brian@ubuntu.com>  Tue, 07 May 2019 10:15:37 -0700
 
 ubuntu-release-upgrader (1:19.10.2) eoan; urgency=medium
 
