DistUpgrade/window_main.ui: Really update for 19.10 (LP: #1825733).

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:19.10.4) UNRELEASED; urgency=medium
+
+  [ Gunnar Hjalmarsson ]
+  * DistUpgrade/window_main.ui: Really update for 19.10 (LP: #1825733).
+
+ -- Brian Murray <brian@ubuntu.com>  Thu, 09 May 2019 11:03:30 -0700
+
 ubuntu-release-upgrader (1:19.10.3) eoan; urgency=medium
 
   * data/DistUpgrade.cfg: update BaseNames section to kernel packages that
