releasing package ubuntu-release-upgrader version 1:19.10.4

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-ubuntu-release-upgrader (1:19.10.4) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:19.10.4) eoan; urgency=medium
 
   [ Gunnar Hjalmarsson ]
   * DistUpgrade/window_main.ui: Really update for 19.10 (LP: #1825733).
 
- -- Brian Murray <brian@ubuntu.com>  Thu, 09 May 2019 11:03:30 -0700
+ -- Brian Murray <brian@ubuntu.com>  Thu, 09 May 2019 11:06:05 -0700
 
 ubuntu-release-upgrader (1:19.10.3) eoan; urgency=medium
 
