--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:19.10.5) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeViewNonInteractive.py: when responding to a
+    conffile prompt with "n" use bytes not a string. (LP: #1796193)
+
+ -- Brian Murray <brian@ubuntu.com>  Thu, 09 May 2019 13:45:16 -0700
+
 ubuntu-release-upgrader (1:19.10.4) eoan; urgency=medium
 
   [ Gunnar Hjalmarsson ]
