DistUpgrade/DistUpgradeController.py: set a default value for devRelease even if there are no options specified. (LP: #1827441)

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ ubuntu-release-upgrader (1:19.10.5) UNRELEASED; urgency=medium
 
   * DistUpgrade/DistUpgradeViewNonInteractive.py: when responding to a
     conffile prompt with "n" use bytes not a string. (LP: #1796193)
+  * DistUpgrade/DistUpgradeController.py: set a default value for devRelease
+    even if there are no options specified. (LP: #1827441)
 
  -- Brian Murray <brian@ubuntu.com>  Thu, 09 May 2019 13:45:16 -0700
 
