releasing package ubuntu-release-upgrader version 1:19.10.5

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-ubuntu-release-upgrader (1:19.10.5) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:19.10.5) eoan; urgency=medium
 
   * DistUpgrade/DistUpgradeViewNonInteractive.py: when responding to a
     conffile prompt with "n" use bytes not a string. (LP: #1796193)
   * DistUpgrade/DistUpgradeController.py: set a default value for devRelease
     even if there are no options specified. (LP: #1827441)
 
- -- Brian Murray <brian@ubuntu.com>  Thu, 09 May 2019 13:45:16 -0700
+ -- Brian Murray <brian@ubuntu.com>  Fri, 10 May 2019 13:30:07 -0700
 
 ubuntu-release-upgrader (1:19.10.4) eoan; urgency=medium
 
