DistUpgradeQuirks.py: modify string regarding refreshing and installing snaps so that it is translatable. (LP: #1824005)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:19.10.6) UNRELEASED; urgency=medium
+
+  * DistUpgradeQuirks.py: modify string regarding refreshing and installing
+    snaps so that it is translatable. (LP: #1824005)
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 14 Jun 2019 10:33:21 -0700
+
 ubuntu-release-upgrader (1:19.10.5) eoan; urgency=medium
 
   * DistUpgrade/DistUpgradeViewNonInteractive.py: when responding to a
