--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:19.10.6) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:19.10.6) eoan; urgency=medium
 
   * DistUpgradeQuirks.py: modify string regarding refreshing and installing
     snaps so that it is translatable. (LP: #1824005)
