--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:19.10.7) UNRELEASED; urgency=medium
+
+  [ Dan Streetman ]
+  * DistUpgrade/DistUpgradeQuirks.py: only try to install snaps if snapstore
+    is reachable. (LP: #1831933)
+
+ -- Brian Murray <brian@ubuntu.com>  Mon, 17 Jun 2019 09:46:22 -0700
+
 ubuntu-release-upgrader (1:19.10.6) eoan; urgency=medium
 
   * DistUpgradeQuirks.py: modify string regarding refreshing and installing
