--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,13 @@
-ubuntu-release-upgrader (1:19.10.8) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:19.10.8) eoan; urgency=medium
 
+  [ Steve Langasek ]
   * Factor the release version out of the to-be-translated strings, so
     that translators don't have to chase updating this for every release.
     LP: #1727472.
   * Update the pot file in the source, evidently not done for the past 3
     years.
 
- -- Steve Langasek <steve.langasek@ubuntu.com>  Mon, 17 Jun 2019 15:39:02 -0700
+ -- Brian Murray <brian@ubuntu.com>  Tue, 18 Jun 2019 08:59:08 -0700
 
 ubuntu-release-upgrader (1:19.10.7) eoan; urgency=medium
 
