DistUpgrade/DistUpgradeCache.py, DistUpgrade/DistUpgradeController.py: drop code which identified obsolete kernels and marked them for removal as it is redundant with functionality that exists in apt. (LP: #1828100)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:19.10.9) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeCache.py, DistUpgrade/DistUpgradeController.py:
+    drop code which identified obsolete kernels and marked them for removal as
+    it is redundant with functionality that exists in apt. (LP: #1828100)
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 21 Jun 2019 10:42:17 -0700
+
 ubuntu-release-upgrader (1:19.10.8) eoan; urgency=medium
 
   [ Steve Langasek ]
