DistUpgrade/DistUpgradeQuirks.py: Create a fallback mechanism for determining the version of a release (necessary for Ubuntu 18.04) when replacing debs with snaps. (LP: #1833753)

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ ubuntu-release-upgrader (1:19.10.9) UNRELEASED; urgency=medium
   * DistUpgrade/DistUpgradeCache.py, DistUpgrade/DistUpgradeController.py:
     drop code which identified obsolete kernels and marked them for removal as
     it is redundant with functionality that exists in apt. (LP: #1828100)
+  * DistUpgrade/DistUpgradeQuirks.py: Create a fallback mechanism for
+    determining the version of a release (necessary for Ubuntu 18.04) when
+    replacing debs with snaps. (LP: #1833753)
 
  -- Brian Murray <brian@ubuntu.com>  Fri, 21 Jun 2019 10:42:17 -0700
 
