DistUpgrade/DistUpgradeQuirks.py: Resolve issue with the fallback mechanism including more than the version number for the release.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:19.10.10) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeQuirks.py: Resolve issue with the fallback
+    mechanism including more than the version number for the release.
+
+ -- Brian Murray <brian@ubuntu.com>  Mon, 24 Jun 2019 11:14:17 -0700
+
 ubuntu-release-upgrader (1:19.10.9) eoan; urgency=medium
 
   * DistUpgrade/DistUpgradeCache.py, DistUpgrade/DistUpgradeController.py:
