--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
-ubuntu-release-upgrader (1:19.10.10) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:19.10.10) eoan; urgency=medium
 
+  [ Brian Murray ]
   * DistUpgrade/DistUpgradeQuirks.py: Resolve issue with the fallback
     mechanism including more than the version number for the release.
 
- -- Brian Murray <brian@ubuntu.com>  Mon, 24 Jun 2019 11:14:17 -0700
+  [ Gianfranco Costamagna ]
+  * Fix E117 over idented code
+
+ -- Gianfranco Costamagna <locutusofborg@debian.org>  Mon, 29 Jul 2019 23:08:52 +0200
 
 ubuntu-release-upgrader (1:19.10.9) eoan; urgency=medium
 
