releasing package ubuntu-release-upgrader version 1:19.10.11

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:19.10.11) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:19.10.11) eoan; urgency=medium
 
   * DistUpgrade/DistUpgradeQuirks.py, DistUpgrade/DistUpgradeCache.py:
     Modify DistUpgradeQuirks to calculate extra space needed for snaps that
