--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:19.10.12) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeQuirks.py: do not include gnome-system-monitor in
+    the deb to snap transition anymore. (LP: #1845485)
+
+ -- Brian Murray <brian@ubuntu.com>  Thu, 26 Sep 2019 10:27:10 -0700
+
 ubuntu-release-upgrader (1:19.10.11) eoan; urgency=medium
 
   * DistUpgrade/DistUpgradeQuirks.py, DistUpgrade/DistUpgradeCache.py:
