DistUpgrade/DistUpgradeQuirks.py: improve wording regarding not being able to upgrade from a system with an apt architecture of i386.

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ ubuntu-release-upgrader (1:19.10.12) UNRELEASED; urgency=medium
 
   * DistUpgrade/DistUpgradeQuirks.py: do not include gnome-system-monitor in
     the deb to snap transition anymore. (LP: #1845485)
+  * DistUpgrade/DistUpgradeQuirks.py: improve wording regarding not being able
+    to upgrade from a system with an apt architecture of i386.
 
  -- Brian Murray <brian@ubuntu.com>  Thu, 26 Sep 2019 10:27:10 -0700
 
