--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,16 @@
 ubuntu-release-upgrader (1:19.10.13) UNRELEASED; urgency=medium
 
+  [ Brian Murray ]
   * DistUpgrade/DistUpgradeQuirks.py: do not include gnome-system-monitor in
     the deb to snap transition anymore. (LP: #1845485)
   * DistUpgrade/DistUpgradeQuirks.py: improve wording regarding not being able
     to upgrade from a system with an apt architecture of i386.
 
- -- Brian Murray <brian@ubuntu.com>  Thu, 26 Sep 2019 10:27:10 -0700
+  [ Łukasz 'sil2100' Zemczak ]
+  * DistUpgrade/DistUpgradeQuirks.py: slightly refactor code to fix related
+    unit tests.
+
+ -- Łukasz 'sil2100' Zemczak <lukasz.zemczak@ubuntu.com>  Thu, 03 Oct 2019 14:34:06 +0200
 
 ubuntu-release-upgrader (1:19.10.12) eoan; urgency=medium
 
