releasing package ubuntu-release-upgrader version 1:19.10.13

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:19.10.13) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:19.10.13) eoan; urgency=medium
 
   [ Brian Murray ]
   * DistUpgrade/DistUpgradeQuirks.py: do not include gnome-system-monitor in
