Don't check for validity of /usr/bin/python symlink because this is no longer relevant to the upgrades (and the printed error message was inaccurate).  LP: #1825655.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:19.10.14) UNRELEASED; urgency=medium
+
+  * Don't check for validity of /usr/bin/python symlink because this is no
+    longer relevant to the upgrades (and the printed error message was
+    inaccurate).  LP: #1825655.
+
+ -- Steve Langasek <steve.langasek@ubuntu.com>  Tue, 08 Oct 2019 15:19:04 -0700
+
 ubuntu-release-upgrader (1:19.10.13) eoan; urgency=medium
 
   [ Brian Murray ]
