Clean up remaining references to /usr/bin/python (tests and utilities) in the source.

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ ubuntu-release-upgrader (1:19.10.14) UNRELEASED; urgency=medium
   * Don't check for validity of /usr/bin/python symlink because this is no
     longer relevant to the upgrades (and the printed error message was
     inaccurate).  LP: #1825655.
+  * Clean up remaining references to /usr/bin/python (tests and utilities)
+    in the source.
 
  -- Steve Langasek <steve.langasek@ubuntu.com>  Tue, 08 Oct 2019 15:19:04 -0700
 
