--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:19.10.14) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeCache.py: New python3-apt bindings no longer provide
+    Package.section, so switch to using Package.{candidate,installed}.section
+    whenever applicable. This fixes broken partial upgrades. (LP: #1841675)
+
+ -- Łukasz 'sil2100' Zemczak <lukasz.zemczak@ubuntu.com>  Thu, 10 Oct 2019 09:59:30 +0200
+
 ubuntu-release-upgrader (1:19.10.13) eoan; urgency=medium
 
   [ Brian Murray ]
