--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:19.10.14) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:19.10.14) eoan; urgency=medium
 
   * DistUpgrade/DistUpgradeCache.py: New python3-apt bindings no longer provide
     Package.section, so switch to using Package.{candidate,installed}.section
