releasing package ubuntu-release-upgrader version 1:19.10.15

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:19.10.15) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:19.10.15) eoan; urgency=medium
 
   * Don't check for validity of /usr/bin/python symlink because this is no
     longer relevant to the upgrades (and the printed error message was
@@ -6,7 +6,7 @@ ubuntu-release-upgrader (1:19.10.15) UNRELEASED; urgency=medium
   * Clean up remaining references to /usr/bin/python (tests and utilities)
     in the source.
 
- -- Steve Langasek <steve.langasek@ubuntu.com>  Tue, 08 Oct 2019 15:19:04 -0700
+ -- Steve Langasek <steve.langasek@ubuntu.com>  Fri, 11 Oct 2019 16:54:15 -0700
 
 ubuntu-release-upgrader (1:19.10.14) eoan; urgency=medium
 
