--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+ubuntu-release-upgrader (1:20.04.1) UNRELEASED; urgency=medium
+
+  * DistUpgrade/{EOL,Devel}ReleaseAnnouncement,
+    DistUpgrade/window_main.ui,
+    data/gtkbuilder/DistUpgrade.ui,
+    data/DistUpgrade.cfg,
+    data/DistUpgrade.cfg.bionic,
+    pre-build.sh:
+    - updated for 19.10 -> 20.04
+
+ -- Brian Murray <brian@ubuntu.com>  Tue, 22 Oct 2019 15:52:31 -0700
+
 ubuntu-release-upgrader (1:19.10.15) eoan; urgency=medium
 
   * Don't check for validity of /usr/bin/python symlink because this is no
