Launchpad automatic translations update.

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -10,15 +10,15 @@ msgstr ""
 "Project-Id-Version: update-manager HEAD\n"
 "Report-Msgid-Bugs-To: sebastian.heinlein@web.de\n"
 "POT-Creation-Date: 2019-10-08 22:24+0000\n"
-"PO-Revision-Date: 2019-06-18 17:55+0000\n"
-"Last-Translator: Brian Murray <brian@ubuntu.com>\n"
+"PO-Revision-Date: 2019-10-26 18:45+0000\n"
+"Last-Translator: Xu Zhen <Unknown>\n"
 "Language-Team: Chinese (simplified) <i18n-zh@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Launchpad-Export-Date: 2019-10-17 06:08+0000\n"
-"X-Generator: Launchpad (build 186023fa645d8be19d403a76064f0643f510db2f)\n"
+"X-Launchpad-Export-Date: 2019-10-27 06:10+0000\n"
+"X-Generator: Launchpad (build 469f241f4e73cc0bdffa4e30654052a2af068e06)\n"
 "Language: \n"
 
 #. TRANSLATORS: %s is a country
@@ -1582,7 +1582,7 @@ msgstr "n"
 #. TRANSLATORS: the "d" is "details"
 #: ../DistUpgrade/DistUpgradeViewText.py:225
 msgid "d"
-msgstr "详"
+msgstr "d"
 
 #: ../DistUpgrade/DistUpgradeViewText.py:230
 #, python-format
