Additionally check for linux-image- in reboot-required.pkgs, refusing upgrading before a reboot is performed.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 ubuntu-release-upgrader (1:20.04.1) UNRELEASED; urgency=medium
 
+  [ Brian Murray ]
   * DistUpgrade/{EOL,Devel}ReleaseAnnouncement,
     DistUpgrade/window_main.ui,
     data/gtkbuilder/DistUpgrade.ui,
@@ -8,7 +9,11 @@ ubuntu-release-upgrader (1:20.04.1) UNRELEASED; urgency=medium
     pre-build.sh:
     - updated for 19.10 -> 20.04
 
- -- Brian Murray <brian@ubuntu.com>  Tue, 22 Oct 2019 15:52:31 -0700
+  [ Łukasz 'sil2100' Zemczak ]
+  * do-release-upgrade: also check for linux-image- in reboot-required.pkgs,
+    refusing upgrading before a reboot is performed. (LP: #1844805)
+
+ -- Łukasz 'sil2100' Zemczak <lukasz.zemczak@ubuntu.com>  Mon, 28 Oct 2019 18:35:36 +0100
 
 ubuntu-release-upgrader (1:19.10.15) eoan; urgency=medium
 
