releasing package ubuntu-release-upgrader version 1:20.04.1

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:20.04.1) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:20.04.1) focal; urgency=medium
 
   [ Brian Murray ]
   * DistUpgrade/{EOL,Devel}ReleaseAnnouncement,
