Additionally check for linux-image- in reboot-required.pkgs, refusing upgrading before a reboot is performed.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:19.10.15.1) UNRELEASED; urgency=medium
+
+  * do-release-upgrade: also check for linux-image- in reboot-required.pkgs,
+    refusing upgrading before a reboot is performed. (LP: #1844805)
+
+ -- Łukasz 'sil2100' Zemczak <lukasz.zemczak@ubuntu.com>  Tue, 29 Oct 2019 10:27:42 +0100
+
 ubuntu-release-upgrader (1:19.10.15) eoan; urgency=medium
 
   * Don't check for validity of /usr/bin/python symlink because this is no
