releasing package ubuntu-release-upgrader version 1:19.10.15.1

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:19.10.15.1) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:19.10.15.1) eoan; urgency=medium
 
   * do-release-upgrade: also check for linux-image- in reboot-required.pkgs,
     refusing upgrading before a reboot is performed. (LP: #1844805)
