Fix binary and binary-indep targets to work as intended (LP: #1850851)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:20.04.2) focal; urgency=medium
+
+  * Fix binary and binary-indep targets to work as intended (LP: #1850851)
+
+ -- Adam Conrad <adconrad@ubuntu.com>  Thu, 31 Oct 2019 13:38:35 -0600
+
 ubuntu-release-upgrader (1:20.04.1) focal; urgency=medium
 
   [ Brian Murray ]
