Fix binary and binary-indep targets to work as intended (LP: #1850851)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:19.10.15.2) eoan; urgency=medium
+
+  * Fix binary and binary-indep targets to work as intended (LP: #1850851)
+
+ -- Adam Conrad <adconrad@ubuntu.com>  Thu, 31 Oct 2019 13:38:35 -0600
+
 ubuntu-release-upgrader (1:19.10.15.1) eoan; urgency=medium
 
   * do-release-upgrade: also check for linux-image- in reboot-required.pkgs,
