data/DistUpgrade.cfg, data/DistUpgrade.cfg.bionic: update for the upgrade from 19.10 to 20.04 harder.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:20.04.3) UNRELEASED; urgency=medium
+
+  * data/DistUpgrade.cfg, data/DistUpgrade.cfg.bionic: update for the upgrade
+    from 19.10 to 20.04 harder.
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 01 Nov 2019 11:03:01 -0700
+
 ubuntu-release-upgrader (1:20.04.2) focal; urgency=medium
 
   * Fix binary and binary-indep targets to work as intended (LP: #1850851)
