Launchpad automatic translations update.

--- a/po/mnw.po
+++ b/po/mnw.po
@@ -15,14 +15,14 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Launchpad-Export-Date: 2019-11-04 06:05+0000\n"
+"X-Launchpad-Export-Date: 2019-11-05 06:04+0000\n"
 "X-Generator: Launchpad (build 469f241f4e73cc0bdffa4e30654052a2af068e06)\n"
 
 #. TRANSLATORS: %s is a country
 #: ../DistUpgrade/distro.py:215 ../DistUpgrade/distro.py:446
 #, python-format
 msgid "Server for %s"
-msgstr ""
+msgstr "သာဗါ သွက် %s"
 
 #. More than one server is used. Since we don't handle this case
 #. in the user interface we set "custom servers" to true and
@@ -30,11 +30,11 @@ msgstr ""
 #: ../DistUpgrade/distro.py:233 ../DistUpgrade/distro.py:239
 #: ../DistUpgrade/distro.py:255
 msgid "Main server"
-msgstr ""
+msgstr "သာဗါ အဓိက"
 
 #: ../DistUpgrade/distro.py:259
 msgid "Custom servers"
-msgstr ""
+msgstr "သာဗါ ကၠောန်ခၞံလဝ်"
 
 #: ../DistUpgrade/DistUpgradeAptCdrom.py:151
 msgid "Could not calculate sources.list entry"
@@ -48,7 +48,7 @@ msgstr ""
 
 #: ../DistUpgrade/DistUpgradeAptCdrom.py:310
 msgid "Failed to add the CD"
-msgstr ""
+msgstr "ပ္ညုၚ်ဂၠံၚ်တရဴ စုတ်ဟွံအံၚ်ဇၞး"
 
 #: ../DistUpgrade/DistUpgradeAptCdrom.py:311
 #, python-format
@@ -59,6 +59,12 @@ msgid ""
 "The error message was:\n"
 "'%s'"
 msgstr ""
+"ပ္ညုၚ်ဂၠံၚ်တရဴ စုတ်ဟွံအံၚ်ဇၞး, သၠုၚ်ပတိုန်က္ဆံၚ် ဟွံတုဲဒှ်ရ။ သ္ပဂုဏ်တုဲ "
+"ပတိုန်ထ္ၜးနကဵု လ္တူပြသၞာဏံ ယဝ်ခရ ပ္ညုၚ်ဂၠံၚ်တရဴ "
+"ဥူဗါန်တူဏံကၠောန်မံၚ်ဂမၠောန်ရတှေ်။\n"
+"\n"
+"ဂလာန်ဂကန်ဏံ ယောၚ်ယာဏံဂှ်:\n"
+"'%s'"
 
 #: ../DistUpgrade/DistUpgradeCache.py:180
 msgid "Remove package in bad state"
@@ -83,11 +89,11 @@ msgstr[1] ""
 #. existing one here to avoid a new string
 #: ../DistUpgrade/DistUpgradeCache.py:299
 msgid "The server may be overloaded"
-msgstr ""
+msgstr "သာဗါ သုၚ်စောဲ ဒးလျိုၚ်ဂၠိုၚ်အာ"
 
 #: ../DistUpgrade/DistUpgradeCache.py:412
 msgid "Broken packages"
-msgstr ""
+msgstr "ထုပ်ကလောံ ဟွံကၠောန်ဂမၠောန်"
 
 #: ../DistUpgrade/DistUpgradeCache.py:413
 msgid ""
@@ -141,7 +147,7 @@ msgstr ""
 
 #: ../DistUpgrade/DistUpgradeCache.py:684
 msgid "Could not calculate the upgrade"
-msgstr ""
+msgstr "တၟော်ဆဟွံဒးပ္ဍဲအရာ သၠုၚ်ပတိုန်ကဆံၚ်"
 
 #: ../DistUpgrade/DistUpgradeCache.py:743
 msgid "Error authenticating some packages"
