--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,14 @@
 ubuntu-release-upgrader (1:20.04.3) UNRELEASED; urgency=medium
 
+  [ Brian Murray ]
   * data/DistUpgrade.cfg, data/DistUpgrade.cfg.bionic: update for the upgrade
     from 19.10 to 20.04 harder.
 
- -- Brian Murray <brian@ubuntu.com>  Fri, 01 Nov 2019 11:03:01 -0700
+  [ Łukasz 'sil2100' Zemczak ]
+  * do-release-upgrade: add linux-base to the check for required reboot after
+    a kernel upgrade (LP: #1844805).
+
+ -- Łukasz 'sil2100' Zemczak <lukasz.zemczak@ubuntu.com>  Wed, 06 Nov 2019 18:24:10 +0100
 
 ubuntu-release-upgrader (1:20.04.2) focal; urgency=medium
 
