Add check for linux-base in required reboot.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:19.10.15.3) UNRELEASED; urgency=medium
+
+  * do-release-upgrade: add linux-base to the check for required reboot after
+    a kernel upgrade (LP: #1844805).
+
+ -- Łukasz 'sil2100' Zemczak <lukasz.zemczak@ubuntu.com>  Thu, 07 Nov 2019 11:56:11 +0100
+
 ubuntu-release-upgrader (1:19.10.15.2) eoan; urgency=medium
 
   * Fix binary and binary-indep targets to work as intended (LP: #1850851)
