--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:19.10.15.3) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:19.10.15.3) eoan; urgency=medium
 
   * do-release-upgrade: add linux-base to the check for required reboot after
     a kernel upgrade (LP: #1844805).
