--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:20.04.5) focal; urgency=medium
+
+  * debian/release-upgrade-motd: Don't try to update cached info
+    as a regular user. That would fail.
+    (LP: #1855271)
+
+ -- Balint Reczey <rbalint@ubuntu.com>  Thu, 05 Dec 2019 17:32:08 +0100
+
 ubuntu-release-upgrader (1:20.04.4) focal; urgency=medium
 
   [ Brian Murray ]
