--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+ubuntu-release-upgrader (1:20.04.6) UNRELEASED; urgency=medium
+
+  * debian/control: Update Vcs-*: URLs
+  * Rename .bzrignore to .gitignore
+  * debian/gbp.conf: Add default configuration
+  * debian/gbp.conf: Move prebuild command here from .bzr-builddeb/default.conf
+
+ -- Balint Reczey <rbalint@ubuntu.com>  Fri, 06 Dec 2019 12:55:52 +0100
+
 ubuntu-release-upgrader (1:20.04.5) focal; urgency=medium
 
   * debian/release-upgrade-motd: Don't try to update cached info
