--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-ubuntu-release-upgrader (1:20.04.6) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:20.04.6) focal; urgency=medium
 
   * debian/control: Update Vcs-*: URLs
   * Rename .bzrignore to .gitignore
   * debian/gbp.conf: Add default configuration
   * debian/gbp.conf: Move prebuild command here from .bzr-builddeb/default.conf
+  * Build source on Focal (LP: #1855437)
 
  -- Balint Reczey <rbalint@ubuntu.com>  Fri, 06 Dec 2019 12:55:52 +0100
 
