--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:20.04.7) focal; urgency=medium
+
+  * debian/release-upgrade-motd: Fix typo preventing the update of the cached info.
+    This fixes the regression introduced when fixing LP: #1855271.
+  * debian/gbp.conf: Really run ./pre-build.sh before build
+
+ -- Balint Reczey <rbalint@ubuntu.com>  Fri, 06 Dec 2019 21:45:46 +0100
+
 ubuntu-release-upgrader (1:20.04.6) focal; urgency=medium
 
   * debian/control: Update Vcs-*: URLs
