--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+ubuntu-release-upgrader (1:20.04.8) UNRELEASED; urgency=medium
+
+  * Do not install a snap package if the corresponding debian package is not
+    installed (LP: #1856996)
+  * Fixed crash when checking a section of a package when the package is a
+    snap (LP: #1856862)
+  * Update release to 20.04 in UI (LP: #1856948)
+
+ -- Jean-Baptiste Lallement <jean-baptiste.lallement@ubuntu.com>  Thu, 19 Dec 2019 15:29:54 +0100
+
 ubuntu-release-upgrader (1:20.04.7) focal; urgency=medium
 
   * debian/release-upgrade-motd: Fix typo preventing the update of the cached info.
