--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:20.04.8) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:20.04.8) focal; urgency=medium
 
   [ Jean-Baptiste Lallement ]
   * Do not install a snap package if the corresponding debian package is not
@@ -10,7 +10,7 @@ ubuntu-release-upgrader (1:20.04.8) UNRELEASED; urgency=medium
   [ Brian Murray ]
   * Translations, demotions and mirror updates.
 
- -- Jean-Baptiste Lallement <jean-baptiste.lallement@ubuntu.com>  Thu, 19 Dec 2019 15:29:54 +0100
+ -- Brian Murray <brian@ubuntu.com>  Fri, 20 Dec 2019 13:14:26 -0800
 
 ubuntu-release-upgrader (1:20.04.7) focal; urgency=medium
 
