tests: Handle the rename of the pep8 tool to pycodestyle.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:20.04.9) UNRELEASED; urgency=medium
+
+  * tests: Handle the rename of the pep8 tool to pycodestyle.
+
+ -- dann frazier <dannf@ubuntu.com>  Wed, 29 Jan 2020 07:27:22 -0700
+
 ubuntu-release-upgrader (1:20.04.8) focal; urgency=medium
 
   [ Jean-Baptiste Lallement ]
