--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:20.04.10) UNRELEASED; urgency=medium
+
+  * Do not attempt to upgrade if the cache has broken packages after having
+    calculated the upgrade (LP: #1861756)
+
+ -- Julian Andres Klode <juliank@ubuntu.com>  Tue, 04 Feb 2020 18:11:28 +0100
+
 ubuntu-release-upgrader (1:20.04.9) focal; urgency=medium
 
   * tests: Handle the rename of the pep8 tool to pycodestyle.
