releasing package ubuntu-release-upgrader version 1:20.04.10

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-ubuntu-release-upgrader (1:20.04.10) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:20.04.10) focal; urgency=medium
 
   * Do not attempt to upgrade if the cache has broken packages after having
     calculated the upgrade (LP: #1861756)
 
- -- Julian Andres Klode <juliank@ubuntu.com>  Tue, 04 Feb 2020 18:11:28 +0100
+ -- Julian Andres Klode <juliank@ubuntu.com>  Tue, 04 Feb 2020 18:12:42 +0100
 
 ubuntu-release-upgrader (1:20.04.9) focal; urgency=medium
 
