releasing package ubuntu-release-upgrader version 1:20.04.11

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-ubuntu-release-upgrader (1:20.04.11) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:20.04.11) focal; urgency=medium
 
   * Fixup the exception building to use package names instead of package
     objects.
 
- -- Julian Andres Klode <juliank@ubuntu.com>  Tue, 04 Feb 2020 18:44:03 +0100
+ -- Julian Andres Klode <juliank@ubuntu.com>  Tue, 04 Feb 2020 18:44:25 +0100
 
 ubuntu-release-upgrader (1:20.04.10) focal; urgency=medium
 
