data/release-upgrades: set Prompt to lts as focal is an LTS release

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:20.04.11ubuntu1) UNRELEASED; urgency=medium
+
+  * data/release-upgrades: set Prompt to lts as focal is an LTS release.
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 07 Feb 2020 12:34:09 -0800
+
 ubuntu-release-upgrader (1:20.04.11) focal; urgency=medium
 
   * Fixup the exception building to use package names instead of package
