--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
-ubuntu-release-upgrader (1:20.04.11ubuntu1) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:20.04.12) UNRELEASED; urgency=medium
 
   * data/release-upgrades: set Prompt to lts as focal is an LTS release.
+  * DistUpgrade/DistUpgradeQuirks.py: Do not allow the upgrade to proceed if
+    the non-transitional lxd deb is installed and we can not acces the Snap
+    Store. (LP: #1834501)
 
  -- Brian Murray <brian@ubuntu.com>  Fri, 07 Feb 2020 12:34:09 -0800
 
