* Add deb2snap.json file for specifying seeded and unseeded snaps.   - Unseed gnome-calculator, gnome-characters, and gnome-logs.   - Seed snap-store.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:20.04.13) UNRELEASED; urgency=medium
+
+  * Add deb2snap.json file for specifying seeded and unseeded snaps.
+    - Unseed gnome-calculator, gnome-characters, and gnome-logs.
+    - Seed snap-store.
+
+ -- Marcus Tomlinson <marcus.tomlinson@canonical.com>  Mon, 24 Feb 2020 10:29:10 +0000
+
 ubuntu-release-upgrader (1:20.04.12) focal; urgency=medium
 
   * data/release-upgrades: set Prompt to lts as focal is an LTS release.
