--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
 ubuntu-release-upgrader (1:20.04.13) UNRELEASED; urgency=medium
 
+  [ Marcus Tomlinson ]
   * Add deb2snap.json file for specifying seeded and unseeded snaps.
     - Unseed gnome-calculator, gnome-characters, and gnome-logs.
     - Seed snap-store.
+
+  [ Iain Lane ]
+  * Run pre-build.sh to update the built-in data.
 
  -- Marcus Tomlinson <marcus.tomlinson@canonical.com>  Mon, 24 Feb 2020 10:29:10 +0000
 
