--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:20.04.13) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:20.04.13) focal; urgency=medium
 
   [ Marcus Tomlinson ]
   * Add deb2snap.json file for specifying seeded and unseeded snaps.
@@ -8,7 +8,7 @@ ubuntu-release-upgrader (1:20.04.13) UNRELEASED; urgency=medium
   [ Iain Lane ]
   * Run pre-build.sh to update the built-in data.
 
- -- Marcus Tomlinson <marcus.tomlinson@canonical.com>  Mon, 24 Feb 2020 10:29:10 +0000
+ -- Marcus Tomlinson <marcus.tomlinson@canonical.com>  Thu, 27 Feb 2020 18:02:12 +0000
 
 ubuntu-release-upgrader (1:20.04.12) focal; urgency=medium
 
