data/removal_blacklist.cfg: do not allow openssh-server to be removed as the upgrade may done over ssh. (LP: #1865309)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:20.04.14) UNRELEASED; urgency=medium
+
+  * data/removal_blacklist.cfg: do not allow openssh-server to be removed as
+    the upgrade may done over ssh. (LP: #1865309)
+
+ -- Brian Murray <brian@ubuntu.com>  Thu, 12 Mar 2020 10:39:55 -0700
+
 ubuntu-release-upgrader (1:20.04.13) focal; urgency=medium
 
   [ Marcus Tomlinson ]
