DistUpgrade/DistUpgradeCache.py: Update kernel and initrd size calculation fallbacks to more closely match reality in focal.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:20.04.15) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeCache.py: Update kernel and initrd size calculation
+    fallbacks to more closely match reality in focal.
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 20 Mar 2020 11:46:13 -0700
+
 ubuntu-release-upgrader (1:20.04.14) focal; urgency=medium
 
   * data/removal_blacklist.cfg: do not allow openssh-server to be removed as
