--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
 ubuntu-release-upgrader (1:20.04.16) UNRELEASED; urgency=medium
 
-  * DistUpgrade/DistUpgradeQuirks.py: Install
-    python-is-python2-but-deprecated if python-minimal is installed. This
-    preserves /usr/bin/python on upgrades.
+  * DistUpgrade/DistUpgradeQuirks.py: Install python-is-python2 if
+    python-minimal is installed. This preserves /usr/bin/python on
+    upgrades.
 
  -- Dimitri John Ledkov <xnox@ubuntu.com>  Wed, 25 Mar 2020 21:44:19 +0000
 
