--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+ubuntu-release-upgrader (1:20.04.17) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeFetcher.py,
+    DistUpgrade/ReleaseNotesViewerWebkit.py: use gi.require_version so that
+    the right version gets loaded and warning messages are not displayed.
+    (LP: #1848629)
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 03 Apr 2020 07:33:01 -0700
+
 ubuntu-release-upgrader (1:20.04.16) focal; urgency=medium
 
   [ Dimitri John Ledkov ]
