--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:20.04.18) UNRELEASED; urgency=medium
+
+  * Use libgtk3-perl, not libgtk2-perl, to decide whether to use the gnome
+    debconf frontend; debconf migrated to GTK+3 in version 1.5.66, before
+    bionic was released.  LP: #1871530.
+
+ -- Steve Langasek <steve.langasek@ubuntu.com>  Tue, 07 Apr 2020 21:05:11 -0700
+
 ubuntu-release-upgrader (1:20.04.17) focal; urgency=medium
 
   * DistUpgrade/DistUpgradeFetcher.py,
