data/mirrors.cfg, utils/update_mirrors.py: Add in ddebs.ubuntu.com as an official package source.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,13 @@
 ubuntu-release-upgrader (1:20.04.18) UNRELEASED; urgency=medium
 
+  [ Steve Langasek ]
   * Use libgtk3-perl, not libgtk2-perl, to decide whether to use the gnome
     debconf frontend; debconf migrated to GTK+3 in version 1.5.66, before
     bionic was released.  LP: #1871530.
+
+  [ Brian Murray ]
+  * data/mirrors.cfg, utils/update_mirrors.py: Add in ddebs.ubuntu.com as an
+    official package source.
 
  -- Steve Langasek <steve.langasek@ubuntu.com>  Tue, 07 Apr 2020 21:05:11 -0700
 
