gbp dch changelog entry

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:20.04.19) UNRELEASED; urgency=medium
+
+  * DistUpgradeCache: Ignore BaseMetaPkgs' & obsolete tasks during server upgrade
+    (LP: #1872902)
+
+ -- Dimitri John Ledkov <xnox@ubuntu.com>  Sun, 26 Apr 2020 17:07:08 +0100
+
 ubuntu-release-upgrader (1:20.04.18) focal; urgency=medium
 
   [ Steve Langasek ]
