--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
-ubuntu-release-upgrader (1:20.04.19) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:20.10.1) UNRELEASED; urgency=medium
 
+  [ Dimitri John Ledkov ]
   * DistUpgradeCache: Ignore BaseMetaPkgs' & obsolete tasks during server upgrade
     (LP: #1872902)
 
- -- Dimitri John Ledkov <xnox@ubuntu.com>  Sun, 26 Apr 2020 17:07:08 +0100
+  [ Brian Murray ]
+  * Update for 20.04 -> 20.10.
+
+ -- Brian Murray <brian@ubuntu.com>  Tue, 05 May 2020 14:25:11 -0700
 
 ubuntu-release-upgrader (1:20.04.18) focal; urgency=medium
 
