--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:20.04.20) UNRELEASED; urgency=medium
+
+  * debian/91-release-upgrade: exit 0 if run as a non-root user.
+    (LP: #1873545) 
+
+ -- Brian Murray <brian@ubuntu.com>  Wed, 24 Jun 2020 15:37:45 -0700
+
 ubuntu-release-upgrader (1:20.04.19) focal; urgency=medium
 
   [ Dimitri John Ledkov ]
