--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:20.10.2) UNRELEASED; urgency=medium
+
+  * debian/91-release-upgrade: exit 0 if run as a non-root user.
+    (LP: #1873545) 
+
+ -- Brian Murray <brian@ubuntu.com>  Wed, 24 Jun 2020 11:29:31 -0700
+
 ubuntu-release-upgrader (1:20.10.1) groovy; urgency=medium
 
   [ Dimitri John Ledkov ]
