--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,9 @@
 ubuntu-release-upgrader (1:20.10.2) UNRELEASED; urgency=medium
 
   * debian/91-release-upgrade: exit 0 if run as a non-root user.
-    (LP: #1873545) 
+    (LP: #1873545)
+  * Only pass the package name to apport in the event that there is a dpkg
+    error during a distribution upgrade. (LP: #1884148)
 
  -- Brian Murray <brian@ubuntu.com>  Wed, 24 Jun 2020 11:29:31 -0700
 
